--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,9 +12,9 @@
   <!-- highlight.js support -->
   <link rel="stylesheet" href="/js/highlightjs/styles/github.css">
   <link rel="stylesheet" href="/js/highlightjs/styles/ssms.css" />
-  <link rel="stylesheet" href="/js/highlightjs-copy.min.css"/>
-  <script type="text/javascript" src="/js/highlightjs/highlight.min.js"></script>
-  <script src="/js/highlightjs-copy.min.js"></script>
+  <link rel="stylesheet" href="js/highlightjs-copy.min.css"/>
+  <script type="text/javascript" src="js/highlightjs/highlight.min.js"></script>
+  <script src="js/highlightjs-copy.min.js"></script>
   <script type="text/javascript" src="/js/highlightjs/languages/plaintext.min.js"></script>
   <script type="text/javascript" src="/js/highlightjs/languages/powershell.min.js"></script>
   <script type="text/javascript" src="/js/highlightjs/languages/tsql.min.js"></script>
