--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,14 +10,14 @@
   {%- endif -%}
 
   <!-- highlight.js support -->
-  <link rel="stylesheet" href="{{/js/highlightjs/styles/g}}ithub.css">
-  <link rel="stylesheet" href="{{/js/highlightjs/styles/s}}sms.css" />
-  <link rel="stylesheet" href="{{/js/highlightjs-copy}}.min.css"/>
-  <script type="text/javascript" src="{{/js/highlightjs/highlight.min.js}}"></script>
-  <script src="{{/js/highlightjs-copy.min.js}}"></script>
-  <script type="text/javascript" src="{{/js/highlightjs/languages/plaintext.min.js}}"></script>
-  <script type="text/javascript" src="{{/js/highlightjs/languages/powershell.min.js}}"></script>
-  <script type="text/javascript" src="{{/js/highlightjs/languages/tsql.min.js}}"></script>
+  <link rel="stylesheet" href="{{ site.baseurl }}/js/highlightjs/styles/github.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/js/highlightjs/styles/ssms.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/js/highlightjs-copy.min.css"/>
+  <script type="text/javascript" src="{{ site.baseurl }}/js/highlightjs/highlight.min.js"></script>
+  <script src="{{ site.baseurl }}/js/highlightjs-copy.min.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/js/highlightjs/languages/plaintext.min.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/js/highlightjs/languages/powershell.min.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/js/highlightjs/languages/tsql.min.js"></script>
 
   <script type="text/javascript"> hljs.highlightAll(); hljs.addPlugin(new CopyButtonPlugin());</script>
   <!-- end highlight.js support -->
